--- a/templates/stat/index.html.twig
+++ b/templates/stat/index.html.twig
@@ -1,135 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <!-- Required meta tags-->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="au theme template">
-    <meta name="author" content="Hau Nguyen">
-    <meta name="keywords" content="au theme template">
-
-    <!-- Title Page-->
-    <title>Dashboard</title>
-
-    <!-- Fontfaces CSS-->
-    <link href="{{ asset('css/font-face.css') }}" rel="stylesheet" media="all">
-    <link href="{{ asset('vendor/font-awesome-4.7/css/font-awesome.min.css') }}" rel="stylesheet" media="all">
-    <link href="{{ asset('vendor/font-awesome-5/css/fontawesome-all.min.css') }}" rel="stylesheet" media="all">
-    <link href="{{ asset('vendor/mdi-font/css/material-design-iconic-font.min.css') }}" rel="stylesheet" media="all">
-
-    <!-- Bootstrap CSS-->
-    <link href="{{ asset('vendor/bootstrap-4.1/bootstrap.min.css') }}" rel="stylesheet" media="all">
-
-    <!-- Vendor CSS-->
-    <link href="{{ asset('vendor/animsition/animsition.min.css') }}" rel="stylesheet" media="all">
-    <link href="{{ asset('vendor/bootstrap-progressbar/bootstrap-progressbar-3.3.4.min.css') }}" rel="stylesheet" media="all">
-    <link href="{{ asset('vendor/wow/animate.css') }}" rel="stylesheet" media="all">
-    <link href="{{ asset('vendor/css-hamburgers/hamburgers.min.css') }}" rel="stylesheet" media="all">
-    <link href="{{ asset('vendor/slick/slick.css') }}" rel="stylesheet" media="all">
-    <link href="{{ asset('vendor/select2/select2.min.css') }}" rel="stylesheet" media="all">
-    <link href="{{ asset('vendor/perfect-scrollbar/perfect-scrollbar.css') }}" rel="stylesheet" media="all">
-
-    <!-- Main CSS-->
-    <link href="{{ asset('css/theme.css') }}" rel="stylesheet" media="all">
-
-</head>
-
-<body class="animsition">
-<div class="page-wrapper">
-
+{% include 'components/admin/base_admin.html.twig' %}
     {% include 'components/admin/nav_admin.html.twig' %}
-
-    <!-- PAGE CONTAINER-->
-    <div class="page-container">
-        <!-- HEADER DESKTOP-->
-        <header class="header-desktop">
-            <div class="section__content section__content--p30">
-                <div class="container-fluid">
-                    <div class="header-wrap">
-                        <form class="form-header" action="" method="POST">
-                            <input class="au-input au-input--xl" type="text" name="search" placeholder="Search for datas &amp; reports..." />
-                            <button class="au-btn--submit" type="submit">
-                                <i class="zmdi zmdi-search"></i>
-                            </button>
-                        </form>
-
-                        <!-- OLD FEATURE -->
-                        <div class="header-button">
-                            <div class="noti-wrap">
-                                <div class="noti__item js-item-menu">
-                                </div>
-                                <div class="noti__item js-item-menu">
-                                    <div class="email-dropdown js-dropdown">
-                                    </div>
-                                </div>
-                                <div class="noti__item js-item-menu">
-                                    <div class="notifi-dropdown js-dropdown">
-                                        <div class="notifi__title">
-                                        </div>
-                                        <div class="notifi__item">
-                                            <div class="bg-c1 img-cir img-40">
-                                            </div>
-                                        </div>
-                                        <div class="notifi__item">
-                                            <div class="content">
-                                            </div>
-                                        </div>
-                                        <div class="notifi__item">
-                                            <div class="bg-c3 img-cir img-40">
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <!-- END OLD FEATURE -->
-
-                            <div class="account-wrap">
-                                <div class="account-item clearfix js-item-menu">
-                                    <div class="content">
-                                        <a class="js-acc-btn" href="#">{{ app.user.firstname }}</a>
-                                    </div>
-                                    <div class="account-dropdown js-dropdown">
-                                        <div class="info clearfix">
-                                            <div class="content">
-                                                <h5 class="name">
-                                                    <a href="#">{{ app.user.firstname }}</a>
-                                                </h5>
-                                                <span class="email">{{ app.user.email }}</span>
-                                            </div>
-                                        </div>
-                                        <div class="account-dropdown__body">
-                                            <div class="account-dropdown__item">
-                                                <a href="#">
-                                                    <i class="zmdi zmdi-account"></i>Account</a>
-                                            </div>
-                                            <div class="account-dropdown__item">
-                                                <a href="#">
-                                                    <i class="zmdi zmdi-settings"></i>Setting</a>
-                                            </div>
-                                            <div class="account-dropdown__item">
-                                                <a href="#">
-                                                    <i class="zmdi zmdi-money-box"></i>Billing</a>
-                                            </div>
-                                        </div>
-                                        <div class="account-dropdown__footer">
-                                            <a href="#">
-                                                <i class="zmdi zmdi-power"></i>Logout</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </header>
-        <!-- HEADER DESKTOP-->
-
-        <!-- MAIN CONTENT-->
-        <div class="main-content">
-            <div class="section__content section__content--p30">
+    {% include 'components/admin/body_header.html.twig' %}
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-md-12">
@@ -215,48 +86,5 @@
                         </div>
                     </div>
                         </div>
-                            </div>
-                        </div>
-                    </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- END MAIN CONTENT-->
-        <!-- END PAGE CONTAINER-->
-    </div>
+{% include 'components/admin/footer_admin.html.twig' %}
 
-</div>
-
-<!-- Jquery JS-->
-<script src="{{ asset('vendor/jquery-3.2.1.min.js') }}"></script>
-<!-- Bootstrap JS-->
-<script src="{{ asset('vendor/bootstrap-4.1/popper.min.js') }}"></script>
-<script src="{{ asset('vendor/bootstrap-4.1/bootstrap.min.js') }}"></script>
-<!-- Vendor JS       -->
-<script src="{{ asset('vendor/slick/slick.min.js') }}">
-</script>
-<script src="{{ asset('vendor/wow/wow.min.js') }}"></script>
-<script src="{{ asset('vendor/animsition/animsition.min.js') }}"></script>
-<script src="{{ asset('vendor/bootstrap-progressbar/bootstrap-progressbar.min.js') }}">
-</script>
-<script src="{{ asset('vendor/counter-up/jquery.waypoints.min.js') }}"></script>
-<script src="{{ asset('vendor/counter-up/jquery.counterup.min.js') }}">
-</script>
-<script src="{{ asset('vendor/circle-progress/circle-progress.min.js') }}"></script>
-<script src="{{ asset('vendor/perfect-scrollbar/perfect-scrollbar.js') }}"></script>
-<script src="{{ asset('vendor/chartjs/Chart.bundle.min.js') }}"></script>
-<script src="{{ asset('vendor/select2/select2.min.js') }}">
-</script>
-
-<!-- Main JS-->
-<script src="{{ asset('js/main.js') }}"></script>
-
-</body>
-
-</html>
-<!-- end document-->
