--- a/templates/admin/user/edit.html.twig
+++ b/templates/admin/user/edit.html.twig
@@ -1,13 +1,15 @@
-{% extends 'base.html.twig' %}
+{% include 'components/admin/base_admin.html.twig' %}
+{% include 'components/admin/nav_admin.html.twig' %}
+{% include 'components/admin/body_header.html.twig' %}
 
-{% block title %}{{parent()}}Edit User{% endblock %}
+{% block title %}Edit User{% endblock %}
 
 {% block body %}
     <h1>Edit User</h1>
 
     {{ include('admin/user/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('user_index') }}">back to list</a>
-
-    {{ include('/admin/user/_delete_form.html.twig') }}
+    <a class="btn btn-primary" href="{{ path('user_index') }}">back to list</a>
 {% endblock %}
+
+{% include 'components/admin/footer_admin.html.twig' %}
