--- a/templates/admin/user/new.html.twig
+++ b/templates/admin/user/new.html.twig
@@ -1,11 +1,13 @@
-{% extends 'base.html.twig' %}
+{% include 'components/admin/base_admin.html.twig' %}
+{% include 'components/admin/nav_admin.html.twig' %}
+{% include 'components/admin/body_header.html.twig' %}
 
-{% block title %}{{parent()}}New User{% endblock %}
+{% block title %}New User{% endblock %}
 
-{% block body %}
-    <h1>Create new User</h1>
 
-    {{ include('admin/user/_form.html.twig') }}
+    {% include 'admin/user/_form.html.twig' %}
 
-    <a href="{{ path('user_index') }}">back to list</a>
-{% endblock %}
+    <a class="btn btn-primary" href="{{ path('user_index') }}">back to list</a>
+
+{% include 'components/admin/footer_admin.html.twig' %}
+
