New order delete

--- a/templates/components/admin/nav_admin.html.twig
+++ b/templates/components/admin/nav_admin.html.twig
@@ -127,7 +127,7 @@
             <ul class="list-unstyled navbar__list">
                 <li class="active has-sub">
                     <a class="js-arrow" href="#">
-                        <i class="fas fa-tachometer-alt"></i>User</a>
+                        <i class="fas fa-users"></i>User</a>
                     <ul class="list-unstyled navbar__sub-list js-sub-list">
                         <li>
                             <a href="{{ path('user_index') }}">All Users</a>
@@ -139,7 +139,7 @@
                 </li>
                 <li class="has-sub">
                     <a class="js-arrow" href="#">
-                        <i class="fas fa-copy"></i>Dish</a>
+                        <i class="zmdi zmdi-receipt"></i>Dish</a>
                     <ul class="list-unstyled navbar__sub-list js-sub-list">
                         <li>
                             <a href="{{ path('dish_index') }}">All Dishes</a>
@@ -151,7 +151,7 @@
                 </li>
                 <li class="has-sub">
                     <a class="js-arrow" href="#">
-                        <i class="fas fa-desktop"></i>Restaurant</a>
+                        <i class="zmdi zmdi-store"></i>Restaurant</a>
                     <ul class="list-unstyled navbar__sub-list js-sub-list">
                         <li>
                             <a href="{{ path('restaurant_index') }}">All Restaurants</a>
@@ -163,13 +163,10 @@
                 </li>
                 <li class="has-sub">
                     <a class="js-arrow" href="#">
-                        <i class="fas fa-desktop"></i>Order</a>
+                        <i class="zmdi zmdi-shopping-cart"></i>Order</a>
                     <ul class="list-unstyled navbar__sub-list js-sub-list">
                         <li>
                             <a href="{{ path('order_index') }}">All Orders</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('order_new') }}">New Order</a>
                         </li>
                     </ul>
                 </li>
