--- a/templates/admin/dish/show.html.twig
+++ b/templates/admin/dish/show.html.twig
@@ -1,10 +1,10 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}{{ parent() }}show Dish{% endblock %}
+{% include 'components/admin/base_admin.html.twig' %}
+{% include 'components/admin/nav_admin.html.twig' %}
+{% include 'components/admin/body_header.html.twig' %}
+{% block title %}show Dish{% endblock %}
 
 {% block body %}
     <h1>Dish</h1>
-
     <table class="table">
         <tbody>
             <tr>
@@ -25,10 +25,33 @@
             </tr>
         </tbody>
     </table>
-
-    <a href="{{ path('dish_index') }}">back to list</a>
-
-    <a href="{{ path('dish_edit', {'id': dish.id}) }}">edit</a>
-
-    {{ include('dish/_delete_form.html.twig') }}
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="table-responsive table--no-card m-b-30">
+                    <table class="table table-borderless table-striped table-earning">
+                        <thead>
+                        <tr>
+                            <th>Id</th>
+                            <th>Name</th>
+                            <th>Price</th>
+                            <th>Preview</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>{{ dish.id }}</td>
+                            <td>{{ dish.name }}</td>
+                            <td>{{ dish.price }}</td>
+                            <td> <img src="{{ dish.preview}}"></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+    <a class="btn btn-primary" href="{{ path('dish_index') }}">back to list</a>
+    <a class="btn btn-primary" href="{{ path('dish_edit', {'id': dish.id}) }}">edit</a>
 {% endblock %}
+		{% include 'components/admin/footer_admin.html.twig' %}
