--- a/templates/admin/dish/index.html.twig
+++ b/templates/admin/dish/index.html.twig
@@ -37,7 +37,7 @@
                                         <i class="zmdi zmdi-edit"></i>
                                     </a>
 
-                                <form method="post" action="{{ path('user_delete', {'id': dish.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+                                <form method="post" action="{{ path('dish_delete', {'id': dish.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
                                     <input type="hidden" name="_method" value="DELETE">
                                     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ dish.id) }}">
                                     <button class="item" data-toggle="tooltip" data-placement="top" title="Delete">
