--- a/templates/admin/order/index.html.twig
+++ b/templates/admin/order/index.html.twig
@@ -1,44 +1,53 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}{{parent()}}Order index
-{% endblock %}
+{% include 'components/admin/base_admin.html.twig' %}
+{% include 'components/admin/nav_admin.html.twig' %}
+{% include 'components/admin/body_header.html.twig' %}
+{% block title %}Order Index{% endblock %}
 
 {% block body %}
-	<h1>Order index</h1>
-
-	<table class="table">
-		<thead>
-			<tr>
-				<th>Id</th>
-				<th>Delivery_date</th>
-				<th>Dishes</th>
-				<th>State</th>
-				<th>actions</th>
-			</tr>
-		</thead>
-		<tbody>
-			{% for order in orders %}
-				<tr>
-                    <td>{{ order.id }}</td>
-					<td>{{ order.deliveryDate ? order.deliveryDate|date('Y-m-d H:i:s') : '' }}</td>
-					<td>
-						{% for orderDish in order.orderDishes %}
-							{{ orderDish.quantity }}
-							{{ orderDish.dish.name }}
-							<p></p>
+	<h1>Order</h1>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="table-responsive table--no-card m-b-30">
+					<table class="table table-borderless table-striped table-earning">
+						<thead>
+						<tr>
+							<th>Id</th>
+							<th>DeliveryDate</th>
+							<th>Dishes</th>
+							<th>State</th>
+							<th>Actions</th>
+						</tr>
+						</thead>
+						<tbody>
+						{% for order in orders %}
+						<tr>
+							<td>{{ order.id }}</td>
+							<td>{{ order.deliveryDate ? order.deliveryDate|date('Y-m-d H:i:s') : '' }}</td>
+							<td>{% for orderDish in order.orderDishes %}
+									{{ orderDish.quantity }}
+									{{ orderDish.dish.name }}
+									<p></p>
+								{% endfor %}
+							</td>
+							<td>{{ order.state }}</td>
+							<td>
+							<div class="table-data-feature">
+									<a class="item" data-toggle="tooltip" data-placement="top" title="More" href="{{ path('order_show', {'id': order.id}) }}">
+										<i class="zmdi zmdi-more"></i>
+									</a>
+									<a class="item" data-toggle="tooltip" data-placement="top" title="Edit" href="{{ path('order_edit', {'id': order.id}) }}">
+										<i class="zmdi zmdi-edit"></i>
+									</a>
+							</div>
+							</td>
+						</tr>
+						</tbody>
 						{% endfor %}
-					</td>
-					<td>{{ order.state }}</td>
-					<td>
-						<a href="{{ path('order_show', {'id': order.id}) }}">show</a>
-						<a href="{{ path('order_edit', {'id': order.id}) }}">edit</a>
-					</td>
-				</tr>
-			{% else %}
-				<tr>
-					<td colspan="3">no records found</td>
-				</tr>
-			{% endfor %}
-		</tbody>
-	</table>
+					</table>
+				</div>
+			</div>
+		</div>
+	</div>
 {% endblock %}
+		{% include 'components/admin/footer_admin.html.twig' %}
