--- a/templates/admin/dish/new.html.twig
+++ b/templates/admin/dish/new.html.twig
@@ -1,11 +1,12 @@
-{% extends 'base.html.twig' %}
+{% include 'components/admin/base_admin.html.twig' %}
+{% include 'components/admin/nav_admin.html.twig' %}
+{% include 'components/admin/body_header.html.twig' %}
 
-{% block title %}{{parent()}}New Dish{% endblock %}
+{% block title %}New Dish{% endblock %}
+<h1>Create new Dish</h1>
 
-{% block body %}
-    <h1>Create new Dish</h1>
+{{ include('admin/dish/_form.html.twig') }}
 
-    {{ include('admin/dish/_form.html.twig') }}
+<a class="btn btn-primary" href="{{ path('dish_index') }}">back to list</a>
 
-    <a href="{{ path('dish_index') }}">back to list</a>
-{% endblock %}
+{% include 'components/admin/footer_admin.html.twig' %}
