--- a/templates/admin/order/edit.html.twig
+++ b/templates/admin/order/edit.html.twig
@@ -1,13 +1,9 @@
-{% extends 'base.html.twig' %}
+{% include 'components/admin/base_admin.html.twig' %}
+{% include 'components/admin/nav_admin.html.twig' %}
+{% include 'components/admin/body_header.html.twig' %}
 
-{% block title %}{{parent()}}Edit Order{% endblock %}
-
-{% block body %}
-    <h1>Edit Order</h1>
-
-    {{ include('admin/order/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('order_index') }}">back to list</a>
-
-    {{ include('admin/order/_delete_form.html.twig') }}
-{% endblock %}
+{% block title %}Edit Order{% endblock %}
+<h1>Edit Order</h1>
+{{ include('admin/order/_form.html.twig', {'button_label': 'Update'}) }}
+<a class="btn btn-primary" href="{{ path('order_index') }}">back to list</a>
+{% include 'components/admin/footer_admin.html.twig' %}
