--- a/templates/admin/restaurant/index.html.twig
+++ b/templates/admin/restaurant/index.html.twig
@@ -1,43 +1,60 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}{{parent()}}Restaurant index{% endblock %}
-
-{% block body %}
-    <h1>Restaurant index</h1>
-
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>Picture</th>
-                <th>Address</th>
-                <th>City</th>
-                <th>Promotion</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for restaurant in restaurants %}
-            <tr>
-                <td>{{ restaurant.id }}</td>
-                <td>{{ restaurant.name }}</td>
-                <td>{{ restaurant.picture }}</td>
-                <td>{{ restaurant.address }}</td>
-                <td>{{ restaurant.city }}</td>
-                <td>{{ restaurant.promotion }}</td>
-                <td>
-                    <a href="{{ path('restaurant_show', {'id': restaurant.id}) }}">show</a>
-                    <a href="{{ path('restaurant_edit', {'id': restaurant.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="7">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    <a href="{{ path('restaurant_new') }}">Create new</a>
-{% endblock %}
+{% include 'components/admin/base_admin.html.twig' %}
+    {% include 'components/admin/nav_admin.html.twig' %}
+    {% include 'components/admin/body_header.html.twig' %}
+    {% block body %}
+        <div class="row">
+            <div class="col-md-12">
+                <!-- DATA TABLE -->
+                <h3 class="title-5 m-b-35">Resraurant Table</h3>
+                <div class="table-data__tool-right">
+                    <a class="au-btn au-btn-icon au-btn--green au-btn--small" href="{{ path('restaurant_new') }}">
+                        <i class="zmdi zmdi-plus"></i>add Restaurant</a>
+                </div>
+            </div>
+            <div class="table-responsive table-responsive-data2">
+                <table class="table table-data2">
+                    <thead>
+                    <tr>
+                        <th>Id</th>
+                        <th>Name</th>
+                        <th>Picture</th>
+                        <th>Address</th>
+                        <th>city</th>
+                        <th>Promotion</th>
+                        <th></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for restaurant in restaurants %}
+                        <tr class="tr-shadow">
+                            <td>{{ restaurant.id }}</td>
+                            <td>{{ restaurant.name }}</td>
+                            <td> <img src="{{ restaurant.picture }}" alt="resto"></td>
+                            <td>{{ restaurant.address }}</td>
+                            <td>{{ restaurant.city }}</td>
+                            <td>{{ restaurant.promotion }} $</td>
+                            <td>
+                                <div class="table-data-feature">
+                                    <a class="item" data-toggle="tooltip" data-placement="top" title="More" href="{{ path('restaurant_edit', {'id': restaurant.id}) }}">
+                                        <i class="zmdi zmdi-more"></i>
+                                    </a>
+                                    <a class="item" data-toggle="tooltip" data-placement="top" title="Edit" href="{{ path('restaurant_show', {'id': restaurant.id}) }}">
+                                        <i class="zmdi zmdi-edit"></i>
+                                    </a>
+                                    <form method="post" action="{{ path('restaurant_delete', {'id': restaurant.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+                                        <input type="hidden" name="_method" value="DELETE">
+                                        <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ restaurant.id) }}">
+                                        <button class="btn">Delete</button>
+                                    </form>
+                                </div>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+            <!-- END DATA TABLE -->
+        </div>
+        </div>
+    {% endblock %}
+    {% include 'components/admin/footer_admin.html.twig' %}
