--- a/templates/admin/restaurant/edit.html.twig
+++ b/templates/admin/restaurant/edit.html.twig
@@ -1,13 +1,15 @@
-{% extends 'base.html.twig' %}
+{% include 'components/admin/base_admin.html.twig' %}
+{% include 'components/admin/nav_admin.html.twig' %}
+{% include 'components/admin/body_header.html.twig' %}
 
-{% block title %}{{parent()}}Edit Restaurant{% endblock %}
+{% block title %}Edit Restaurant{% endblock %}
 
 {% block body %}
     <h1>Edit Restaurant</h1>
 
     {{ include('admin/restaurant/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('restaurant_index') }}">back to list</a>
+    <a class="btn btn-primary" href="{{ path('restaurant_index') }}">back to list</a>
 
-    {{ include('admin/restaurant/_delete_form.html.twig') }}
 {% endblock %}
+{% include 'components/admin/footer_admin.html.twig' %}
