--- a/templates/admin/restaurant/new.html.twig
+++ b/templates/admin/restaurant/new.html.twig
@@ -1,11 +1,14 @@
-{% extends 'base.html.twig' %}
+{% include 'components/admin/base_admin.html.twig' %}
+{% include 'components/admin/nav_admin.html.twig' %}
+{% include 'components/admin/body_header.html.twig' %}
 
-{% block title %}{{parent()}}New Restaurant{% endblock %}
+{% block title %}New Restaurant{% endblock %}
 
-{% block body %}
+
     <h1>Create new Restaurant</h1>
 
     {{ include('admin/restaurant/_form.html.twig') }}
 
-    <a href="{{ path('restaurant_index') }}">back to list</a>
-{% endblock %}
+    <a class="btn btn-primary" href="{{ path('restaurant_index') }}">back to list</a>
+
+{% include 'components/admin/footer_admin.html.twig' %}
