--- a/templates/admin/restaurant/show.html.twig
+++ b/templates/admin/restaurant/show.html.twig
@@ -1,71 +1,82 @@
-{% extends 'base.html.twig' %}
+{% include 'components/admin/base_admin.html.twig' %}
+{% include 'components/admin/nav_admin.html.twig' %}
+{% include 'components/admin/body_header.html.twig' %}
 
-{% block title %}{{parent()}}Restaurant
+{% block title %}
+	Restaurant
 {% endblock %}
 
 {% block body %}
 	<h1>Restaurant</h1>
 
-	<table class="table">
-		<tbody>
-			<tr>
-				<th>Id</th>
-				<td>{{ restaurant.id }}</td>
-			</tr>
-			<tr>
-				<th>Name</th>
-				<td>{{ restaurant.name }}</td>
-			</tr>
-			<tr>
-				<th>Picture</th>
-				<td>{{ restaurant.picture }}</td>
-			</tr>
-			<tr>
-				<th>Address</th>
-				<td>{{ restaurant.address }}</td>
-			</tr>
-			<tr>
-				<th>City</th>
-				<td>{{ restaurant.city }}</td>
-			</tr>
-			<tr>
-				<th>Promotion</th>
-				<td>{{ restaurant.promotion }}</td>
-			</tr>
-			<caption class="d-flex flex-column ml-2">
-				<h2 class="text-dark">orders</h2>
-				{% for order in restaurant.orders %}
-					<div class="m-4">
-						<div>
-							<span class="text-dark">id:
-							</span>
-							{{ order.id }}</div>
-						<div>
-							<span class="text-dark">state:
-							</span>
-							{{ order.state }}</div>
-						<div>
-							<span class="text-dark">delivery date:
-							</span>
-							{{ order.deliveryDate|date('Y-m-d H:i:s') }}</div>
-						<div>
-							<span class="text-dark">name:
-							</span>
-							{{ order.users.firstname }}
-							{{ order.users.firstname }}</div>
-						<span class="text-dark">dishes:
-						</span>
-						{% for orderDish in order.orderDishes %}
-							<div>
-								{{ orderDish.quantity }}
-								{{ orderDish.dish.name }}
-							</div>
-						{% endfor %}
-					</div>
-				{% endfor %}
-			</caption>
-		</tbody>
-	</table>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="table-responsive table--no-card m-b-30">
+					<table class="table table-borderless table-striped table-earning">
+						<tbody>
+							<tr>
+								<th>Id</th>
+								<td>{{ restaurant.id }}</td>
+							</tr>
+							<tr>
+								<th>Name</th>
+								<td>{{ restaurant.name }}</td>
+							</tr>
+							<tr>
+								<th>Picture</th>
+								<td>{{ restaurant.picture }}</td>
+							</tr>
+							<tr>
+								<th>Address</th>
+								<td>{{ restaurant.address }}</td>
+							</tr>
+							<tr>
+								<th>City</th>
+								<td>{{ restaurant.city }}</td>
+							</tr>
+							<tr>
+								<th>Promotion</th>
+								<td>{{ restaurant.promotion }}</td>
+							</tr>
+							<caption class="d-flex flex-column ml-2">
+								<h2 class="text-dark">orders</h2>
+								{% for order in restaurant.orders %}
+									<div class="m-4">
+										<div>
+											<span class="text-dark">id:
+											</span>
+											{{ order.id }}</div>
+										<div>
+											<span class="text-dark">state:
+											</span>
+											{{ order.state }}</div>
+										<div>
+											<span class="text-dark">delivery date:
+											</span>
+											{{ order.deliveryDate|date('Y-m-d H:i:s') }}</div>
+										<div>
+											<span class="text-dark">name:
+											</span>
+											{{ order.users.firstname }}
+											{{ order.users.firstname }}</div>
+										<span class="text-dark">dishes:
+										</span>
+										{% for orderDish in order.orderDishes %}
+											<div>
+												{{ orderDish.quantity }}
+												{{ orderDish.dish.name }}
+											</div>
+										{% endfor %}
+									</div>
+								{% endfor %}
+							</caption>
+						</tbody>
+					</table>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<a href="{{ path('restaurant_index') }}">back to list</a>
 
@@ -73,3 +84,4 @@
 
 	{{ include('admin/restaurant/_delete_form.html.twig') }}
 {% endblock %}
+{% include 'components/admin/footer_admin.html.twig' %}
