--- a/templates/admin/restaurant/new.html.twig
+++ b/templates/admin/restaurant/new.html.twig
@@ -2,7 +2,7 @@
 {% include 'components/admin/nav_admin.html.twig' %}
 {% include 'components/admin/body_header.html.twig' %}
 
-{% block title %}New Restaurant{% endblock %}
+{% block title %}{{ parent() }}New Restaurant{% endblock %}
 
 
     <h1>Create new Restaurant</h1>
