--- a/templates/admin/dish/new.html.twig
+++ b/templates/admin/dish/new.html.twig
@@ -2,7 +2,7 @@
 {% include 'components/admin/nav_admin.html.twig' %}
 {% include 'components/admin/body_header.html.twig' %}
 
-{% block title %}New Dish{% endblock %}
+{% block title %}{{ parent() }}New Dish{% endblock %}
 <h1>Create new Dish</h1>
 
 {{ include('admin/dish/_form.html.twig') }}
