--- a/templates/admin/restaurant/edit.html.twig
+++ b/templates/admin/restaurant/edit.html.twig
@@ -2,7 +2,7 @@
 {% include 'components/admin/nav_admin.html.twig' %}
 {% include 'components/admin/body_header.html.twig' %}
 
-{% block title %}Edit Restaurant{% endblock %}
+{% block title %}{{ parent() }}Edit Restaurant{% endblock %}
 
 {% block body %}
     <h1>Edit Restaurant</h1>
