--- a/templates/admin/restaurant/index.html.twig
+++ b/templates/admin/restaurant/index.html.twig
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col-md-12">
                 <!-- DATA TABLE -->
-                <h3 class="title-5 m-b-35">Resraurant Table</h3>
+                <h3 class="title-5 m-b-35">Restaurant Table</h3>
                 <div class="table-data__tool-right">
                     <a class="au-btn au-btn-icon au-btn--green au-btn--small" href="{{ path('restaurant_new') }}">
                         <i class="zmdi zmdi-plus"></i>add Restaurant</a>
