--- a/templates/admin/user/new.html.twig
+++ b/templates/admin/user/new.html.twig
@@ -2,7 +2,7 @@
 {% include 'components/admin/nav_admin.html.twig' %}
 {% include 'components/admin/body_header.html.twig' %}
 
-{% block title %}New User{% endblock %}
+{% block title %}{{ parent() }}New User{% endblock %}
 
 
     {% include 'admin/user/_form.html.twig' %}
