change titles head admin

--- a/templates/admin/dish/show.html.twig
+++ b/templates/admin/dish/show.html.twig
@@ -1,7 +1,7 @@
 {% include 'components/admin/base_admin.html.twig' %}
 {% include 'components/admin/nav_admin.html.twig' %}
 {% include 'components/admin/body_header.html.twig' %}
-{% block title %}{{ parent() }}show Dish{% endblock %}
+{% block title %}show Dish{% endblock %}
 
 {% block body %}
     <h1>Dish</h1>
