--- a/templates/admin/restaurant/show.html.twig
+++ b/templates/admin/restaurant/show.html.twig
@@ -3,7 +3,7 @@
 {% include 'components/admin/body_header.html.twig' %}
 
 {% block title %}
-	{{ parent() }}Restaurant
+	Restaurant
 {% endblock %}
 
 {% block body %}
