--- a/templates/admin/user/edit.html.twig
+++ b/templates/admin/user/edit.html.twig
@@ -2,7 +2,7 @@
 {% include 'components/admin/nav_admin.html.twig' %}
 {% include 'components/admin/body_header.html.twig' %}
 
-{% block title %}{{ parent() }}Edit User{% endblock %}
+{% block title %}Edit User{% endblock %}
 
 {% block body %}
     <h1>Edit User</h1>
