--- a/templates/admin/restaurant/index.html.twig
+++ b/templates/admin/restaurant/index.html.twig
@@ -44,7 +44,9 @@
                                     <form method="post" action="{{ path('restaurant_delete', {'id': restaurant.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
                                         <input type="hidden" name="_method" value="DELETE">
                                         <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ restaurant.id) }}">
-                                        <button class="btn">Delete</button>
+                                        <button class="item" data-toggle="tooltip" data-placement="top" title="Delete">
+                                            <i class="zmdi zmdi-delete"></i>
+                                        </button>
                                     </form>
                                 </div>
                             </td>
@@ -54,7 +56,6 @@
                 </table>
             </div>
             <!-- END DATA TABLE -->
-        </div>
         </div>
     {% endblock %}
     {% include 'components/admin/footer_admin.html.twig' %}
