--- a/templates/components/admin/body_header.html.twig
+++ b/templates/components/admin/body_header.html.twig
@@ -1,79 +1,69 @@
 <!-- HEADER DESKTOP-->
 <header class="header-desktop">
-    <div class="section__content section__content--p30">
-        <div class="container-fluid">
-            <div class="header-wrap">
-                <form class="form-header" action="" method="POST">
-                    <input class="au-input au-input--xl" type="text" name="search" placeholder="Search for datas &amp; reports..." />
-                    <button class="au-btn--submit" type="submit">
-                        <i class="zmdi zmdi-search"></i>
-                    </button>
-                </form>
+	<div class="section__content section__content--p30">
+		<div class="container-fluid">
+			<div
+				class="header-wrap">
+				<!-- OLD FEATURE -->
+				<div class="header-button" style="width: 100%;">
+					<div class="noti-wrap">
+						<div class="noti__item js-item-menu"></div>
+						<div class="noti__item js-item-menu">
+							<div class="email-dropdown js-dropdown"></div>
+						</div>
+						<div class="noti__item js-item-menu">
+							<div class="notifi-dropdown js-dropdown">
+								<div class="notifi__title"></div>
+								<div class="notifi__item">
+									<div class="bg-c1 img-cir img-40"></div>
+								</div>
+								<div class="notifi__item">
+									<div class="content"></div>
+								</div>
+								<div class="notifi__item">
+									<div class="bg-c3 img-cir img-40"></div>
+								</div>
+							</div>
+						</div>
+					</div>
 
-                <!-- OLD FEATURE -->
-                <div class="header-button">
-                    <div class="noti-wrap">
-                        <div class="noti__item js-item-menu">
-                        </div>
-                        <div class="noti__item js-item-menu">
-                            <div class="email-dropdown js-dropdown">
-                            </div>
-                        </div>
-                        <div class="noti__item js-item-menu">
-                            <div class="notifi-dropdown js-dropdown">
-                                <div class="notifi__title">
-                                </div>
-                                <div class="notifi__item">
-                                    <div class="bg-c1 img-cir img-40">
-                                    </div>
-                                </div>
-                                <div class="notifi__item">
-                                    <div class="content">
-                                    </div>
-                                </div>
-                                <div class="notifi__item">
-                                    <div class="bg-c3 img-cir img-40">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+					<!-- END OLD FEATURE -->
 
-                    <!-- END OLD FEATURE -->
-
-                    <div class="account-wrap">
-                        <div class="account-item clearfix js-item-menu">
-                            <div class="content">
-                                <a class="js-acc-btn" href="#">{{ app.user.firstname }}</a>
-                            </div>
-                            <div class="account-dropdown js-dropdown">
-                                <div class="info clearfix">
-                                    <div class="content">
-                                        <h5 class="name">
-                                            <a href="#">{{ app.user.firstname }}</a>
-                                        </h5>
-                                        <span class="email">{{ app.user.email }}</span>
-                                    </div>
-                                </div>
-                                <div class="account-dropdown__body">
-                                    <div class="account-dropdown__item">
-                                        <a href="{{ path('account_edit') }}">
-                                            <i class="zmdi zmdi-account"></i>Account</a>
-                                    </div>
-                                </div>
-                                <div class="account-dropdown__footer">
-                                    <a href="{{ path('app_logout') }}">
-                                        <i class="zmdi zmdi-power"></i>Logout</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+					<div class="account-wrap" style="width: 100%;
+														display: flex;
+														justify-content: flex-end;">
+						<div class="account-item clearfix js-item-menu">
+							<div class="content">
+								<a class="js-acc-btn" href="#">{{ app.user.firstname }}</a>
+							</div>
+							<div class="account-dropdown js-dropdown">
+								<div class="info clearfix">
+									<div class="content">
+										<h5 class="name">
+											<a href="#">{{ app.user.firstname }}</a>
+										</h5>
+										<span class="email">{{ app.user.email }}</span>
+									</div>
+								</div>
+								<div class="account-dropdown__body">
+									<div class="account-dropdown__item">
+										<a href="{{ path('account_edit') }}">
+											<i class="zmdi zmdi-account"></i>Account</a>
+									</div>
+								</div>
+								<div class="account-dropdown__footer">
+									<a href="{{ path('app_logout') }}">
+										<i class="zmdi zmdi-power"></i>Logout</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </header>
 <!-- HEADER DESKTOP-->
 <!-- MAIN CONTENT-->
 <div class="main-content">
-    <div class="section__content section__content--p30">
+	<div class="section__content section__content--p30">
