--- a/templates/admin/restaurant/index.html.twig
+++ b/templates/admin/restaurant/index.html.twig
@@ -35,10 +35,10 @@
                             <td>{{ restaurant.promotion }} $</td>
                             <td>
                                 <div class="table-data-feature">
-                                    <a class="item" data-toggle="tooltip" data-placement="top" title="More" href="{{ path('restaurant_edit', {'id': restaurant.id}) }}">
+                                    <a class="item" data-toggle="tooltip" data-placement="top" title="More" href="{{ path('restaurant_show', {'id': restaurant.id}) }}">
                                         <i class="zmdi zmdi-more"></i>
                                     </a>
-                                    <a class="item" data-toggle="tooltip" data-placement="top" title="Edit" href="{{ path('restaurant_show', {'id': restaurant.id}) }}">
+                                    <a class="item" data-toggle="tooltip" data-placement="top" title="Edit" href="{{ path('restaurant_edit', {'id': restaurant.id}) }}">
                                         <i class="zmdi zmdi-edit"></i>
                                     </a>
                                     <form method="post" action="{{ path('restaurant_delete', {'id': restaurant.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
