--- a/templates/user/account/edit.html.twig
+++ b/templates/user/account/edit.html.twig
@@ -1,8 +1,12 @@
-{% extends 'base.html.twig' %}
+{% include 'components/admin/base_admin.html.twig' %}
+{% include 'components/admin/nav_admin.html.twig' %}
+{% include 'components/admin/body_header.html.twig' %}
 
-{% block title %}{{parent()}}My profile{% endblock %}
+{% block title %}My profile{% endblock %}
 
 {% block body %}
     <h1>My profile</h1>
     {{ include('/user/account/_form.html.twig', {'button_label': 'Update'}) }}
+    <a class="btn btn-primary" href="{{ path('admin_stat') }}">back to list</a>
 {% endblock %}
+{% include 'components/admin/footer_admin.html.twig' %}
