--- a/templates/admin/stat/index.html.twig
+++ b/templates/admin/stat/index.html.twig
@@ -19,7 +19,7 @@
                         </div>
                         <div class="text">
                             <h2>{{ nombreRestaurants }}</h2>
-                            <span>Restaurants Total</span>
+                            <span>Restaurant Total</span>
                         </div>
                     </div>
                     <div class="overview-chart">
