--- a/templates/admin/order/show.html.twig
+++ b/templates/admin/order/show.html.twig
@@ -32,7 +32,7 @@
 									{% endfor %}
 								</caption>
 							</td>
-							{% if order.message is defined and order.message is null %}
+							{% if order.commentary is defined and order.commentary is null %}
 							<td>
 								<caption class="d-flex flex-column" style="margin-left: 10%;">
 									<p>message :
